--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "trello-clone",
-  "engines": {
-    "node": "8.9.4"
-  },
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
@@ -10,7 +7,8 @@
     "vue": "^2.5.13",
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.13",
-    "vuedraggable": "^2.16.0"
+    "vuedraggable": "^2.16.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.1.0"
